--- a/demo/index-gh.html
+++ b/demo/index-gh.html
@@ -10,14 +10,14 @@
   <body>
     <nav>
       <header> <a href="/ReDoc"> ReDoc </a> </header>
-      <template is="dom-bind" id="specs">
+      <ng-template is="dom-bind" id="specs">
         <form id="schema-url-form" is="iron-form">
           <vaadin-combo-box-light id="spec-input" items="[[specs]]" allow-custom-value>
             <input placeholder="URL to a spec to try" id="schema-url-input" type="text" is="iron-input" value="https://rebilly.github.io/RebillyAPI/swagger.json">
           </vaadin-combo-box-light>
           <button type="submit"> Explore </button>
         </form>
-      </template>
+      </ng-template>
       <iframe src="https://ghbtns.com/github-btn.html?user=Rebilly&repo=ReDoc&type=star&count=true&size=large"
       frameborder="0" scrolling="0" width="150px" height="30px"></iframe>
     </nav>
