--- a/demo/playground/index.html
+++ b/demo/playground/index.html
@@ -14,6 +14,12 @@
     redoc {
       display: block;
     }
+
+    label[role=menuitem][type=group] {
+      color: orange;
+      font-weight: bolder;
+      font-size: 120%;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
 </head>
