--- a/tests/e2e/index.html
+++ b/tests/e2e/index.html
@@ -14,7 +14,7 @@
     <script>
       window.redocError = null;
       /* init redoc */
-      var url = window.location.search.substr(5) || 'http://rebilly.github.io/ReDoc/swagger.yaml';
+      var url = window.location.search.substr(5) || 'http://redocly.github.io/redoc/swagger.yaml';
       Redoc.init(decodeURIComponent(url), {disableLazySchemas: true, suppressWarnings: true}).then(function() {}, function(err) {
         window.redocError = err;
       });
