--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,14 @@
     redoc {
       display: block;
     }
+
+    .auth {
+      padding: 20px 0 0 0 !important;
+    }
+
+    h1, h2, h3, h4 {
+      padding-bottom: 0px !important;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
 </head>
