--- a/demo/playground/index.html
+++ b/demo/playground/index.html
@@ -14,6 +14,14 @@
     redoc {
       display: block;
     }
+
+    .auth {
+      padding: 10px 0 0 0 !important; 
+    }
+
+    h1, h2, h3, h4 {
+      margin-bottom: 0px !important;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
 </head>
