--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     redoc {
       display: block;
-    }</style><link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet"></head><body><div id="container"></div><script>(function (i, s, o, g, r, a, m) {
+    }</style><link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet"><script defer="defer" src="redoc-demo.bundle.js"></script></head><body><div id="container"></div><script>(function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
         (i[r].q = i[r].q || []).push(arguments)
       }, i[r].l = 1 * new Date(); a = s.createElement(o),
@@ -15,4 +15,4 @@
     if (window.location.host === 'rebilly.github.io') {
       ga('create', 'UA-81703547-1', 'auto');
       ga('send', 'pageview');
-    }</script><script src="redoc-demo.bundle.js"></script></body></html>
+    }</script></body></html>
