--- a/config/docker/index.tpl.html
+++ b/config/docker/index.tpl.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700"
       rel="stylesheet"
     />
+    <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet" />
   </head>
 
   <body>
