--- a/config/docker/index.tpl.html
+++ b/config/docker/index.tpl.html
@@ -16,7 +16,7 @@
       }
     </style>
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700"
+      href="%FONT_FAMILY_URL%"
       rel="stylesheet"
     />
   </head>
